<resources>
    <string name="app_name">MovieApp</string>
    <string name="movieapp">MovieApp</string>
    <string name="add_movies_to_db">Add Movies to DB</string>
    <string name="search_for_movies">Search for Movies</string>
    <string name="search_for_actors">Search for Actors</string>
    <string name="search_for_actor">Search for Actor</string>
    <string name="search_for_movie">Search for Movie</string>
    <string name="movies_in_db">Movies in DB</string>
    <string name="search">Retrieve</string>
    <string name="add_to_db">Add to DB</string>
    <string name="searchA">Search</string>
    <string name="add_to_dbA">Add to DB</string>
    <string name="searchAdd">Search</string>
    <string name="searchName">Search</string>
    <string name="view_db">View DB</string>
    <string name="search_for_name">Search For Movies</string>
</resources>